--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
 			height: 300px;
 			width: 575px;
 			z-index: 2000;
-			display: block;
+			display: none;
 			background-color: #fff;
 		}
 		.users-body p,
