--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -233,13 +233,13 @@
     function setUserAction (id){
         var sq = ".user_id"+id+" select";
         //SENDATA.push({id:id,projectId:$(sq).val()-0})
-        SENDATA.push(sq);
+        SENDATA.push(id);
 	}
 
 	function senData() {
         var senuser = [];
         for (var i = 0; i < SENDATA.length; i++) {
-            senuser.push({id:id,projectId:$(SENDATA[i]).val()-0})
+            senuser.push({id:SENDATA[i],projectId:$(".user_id"+SENDATA[i]+" select").val()-0});
         }
 
         $.ajax({
